--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
     "qs": "^6.5.1",
     "serve-favicon": "^2.4.5",
     "vue": "^2.5.2",
@@ -46,6 +48,7 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "iview": "^2.7.4",
+    "js-yaml": "^3.12.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
